优化模块名获取